--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
+  "scripts": {
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
+  },
   "dependencies": {
-    "mongodb": "^4.3.0"
+    "express": "^4.17.2",
+    "mongodb": "^4.3.0",
+    "mongoose": "^5.3.16",
+    "validator": "^10.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
