--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.2",
     "mongodb": "^4.3.0",
     "mongoose": "^5.3.16",
