--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jsonwebtoken": "^8.4.0",
     "mongodb": "^4.3.0",
     "mongoose": "^5.3.16",
+    "multer": "^1.4.4",
     "validator": "^10.9.0"
   },
   "devDependencies": {
