--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mongodb": "^4.3.0",
     "mongoose": "^5.3.16",
     "multer": "^1.4.4",
+    "sharp": "^0.29.3",
     "validator": "^10.9.0"
   },
   "devDependencies": {
