Set environment variables to mask API keys and token

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "env-cmd -f./config/dev.env nodemon src/index.js"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.6.0",
@@ -15,6 +15,7 @@
     "validator": "^10.9.0"
   },
   "devDependencies": {
+    "env-cmd": "^10.1.0",
     "nodemon": "^2.0.15"
   }
 }
